# Houdini-PointDeformByPrim

./: .gitignore  CMakeLists.txt  README.md  SOP_PointDeformByPrim.cpp  SOP_PointDeformByPrim.h  ThreadedPointDeform.cpp  ThreadedPointDeform.h  Utils.h
compiled/win/H19.0.720_Py3/: SOP_PointDeformByPrim.exp  SOP_PointDeformByPrim.lib
help/nodes/sop/: pointdeformbyprim.txt
